fixed issue with code inside code tag not collapsing onto new line

--- a/assets/style.css
+++ b/assets/style.css
@@ -40,8 +40,9 @@
   padding: 2rem;
 }
 
-.code-block{
-  min-width: fit-content;
+/* white-space fixed issue with code line not collapsing onto new line */
+.code-block {
+  white-space: pre-wrap; 
 }
 
 /* Footer */
